remember list postion

--- a/Split_It/Split_It/FriendDetailPage.xaml
+++ b/Split_It/Split_It/FriendDetailPage.xaml
@@ -91,6 +91,7 @@
             </pr:PullToRefreshBox.TopIndicatorTemplate>
 
             <ListView ItemsSource="{Binding ExpensesList}" ItemTemplate="{StaticResource ExpenseTemplate}" 
+                      x:Name="myListView"
                       FooterTemplate="{StaticResource FooterTemplate}" SelectedItem="{Binding SelectedExpense, Mode=TwoWay}"/>
             <Interactivity:Interaction.Behaviors>
                 <Core:EventTriggerBehavior EventName="RefreshInvoked">
