--- a/Split_It/Split_It/GroupDetailPage.xaml
+++ b/Split_It/Split_It/GroupDetailPage.xaml
@@ -86,6 +86,7 @@
             </pr:PullToRefreshBox.TopIndicatorTemplate>
 
             <ListView ItemsSource="{Binding ExpensesList}" ItemTemplate="{StaticResource ExpenseTemplate}" 
+                      Name="myListView"
                       FooterTemplate="{StaticResource FooterTemplate}" SelectedItem="{Binding SelectedExpense, Mode=TwoWay}"/>
             <Interactivity:Interaction.Behaviors>
                 <Core:EventTriggerBehavior EventName="RefreshInvoked">
