remember open tab indeX

--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -88,7 +88,7 @@
                     <!--Show Ad-->
                 </RelativePanel>
 
-                <Pivot Grid.Row="1" Style="{StaticResource TabsStylePivotStyle}">
+                <Pivot Grid.Row="1" Style="{StaticResource TabsStylePivotStyle}" x:Name="Tabs">
                     <PivotItem Header="Friends">
                         <Grid>
                             <Grid.RowDefinitions>
