--- a/Split_It/Split_It/Skins/MainViewSkin.xaml
+++ b/Split_It/Split_It/Skins/MainViewSkin.xaml
@@ -505,4 +505,15 @@
         </Setter>
     </Style>
 
+    <Style x:Key="MenuStack" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Horizontal"/>
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
+    <Style x:Key="MenuTextView" TargetType="TextBlock">
+        <Setter Property="Margin" Value="10,0,0,0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
 </ResourceDictionary>
