--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -302,9 +302,9 @@
                                                     <RowDefinition Height="Auto"/>
                                                     <RowDefinition Height="Auto"/>
                                                 </Grid.RowDefinitions>
-                                                <TextBlock Text="{Binding Content}" TextWrapping="Wrap"/>
+                                                <RichTextBlock TextWrapping="Wrap"/>
                                                 <TextBlock Foreground="{StaticResource settled}" FontSize="12" Grid.Row="1"
-                                                           Text="{Binding CreatedDate, Converter={StaticResource DateTimeFormatConverter}, ConverterParameter='dd MMMM'}" 
+                                                           Text="{Binding CreatedDate, Converter={StaticResource DateTimeFormatConverter}, ConverterParameter='h:mm tt dd MMMM'}" 
                                                            Margin="0,5,0,0"/>
                                             </Grid>
                                         </Grid>
