--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<Page xmlns:my="using:Microsoft.AdMediator.Universal" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Split_It"
@@ -10,7 +10,8 @@
     xmlns:con_bal="using:Split_It.Converter.Balance"
     xmlns:con_summ="using:Split_It.Converter.Summary"
     xmlns:common="using:Split_It.Utils"
-    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" 
+    xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     x:Class="Split_It.MainPage"
     mc:Ignorable="d">
 
@@ -122,13 +123,20 @@
                 </Grid.RowDefinitions>
                 <RelativePanel Grid.Row="0" Background="{StaticResource splitwiseGreen}">
                     <Button FontFamily="Segoe MDL2 Assets" 
-						Foreground="White"
-						Content="&#xE700;"
-						Width="50" Height="50" 
-						Background="Transparent" 
-						Click="HamburgerButton_Click" Style="{StaticResource NoBorderSelectButton}"/>
+						    Foreground="White"
+						    Content="&#xE700;"
+                            x:Name="Hamburger"
+						    Width="50" Height="50" 
+						    Background="Transparent" 
+						    Click="HamburgerButton_Click" Style="{StaticResource NoBorderSelectButton}"/>
 
                     <!--Show Ad-->
+                    <my:AdMediatorControl x:Name="AdMediator_61D8F6" 
+                                          AdMediatorError="AdMediator_61D8F6_AdMediatorError"
+                                          AdSdkError="AdMediator_61D8F6_AdSdkError"
+                                          RelativePanel.RightOf="Hamburger" Height="50"
+                                          Id="AdMediator-Id-07E69E76-4CF5-4BA8-8E94-FCDC58B6ED22"
+                                          Width="300"/>
                 </RelativePanel>
 
                 <Pivot Grid.Row="1" Style="{StaticResource TabsStylePivotStyle}" x:Name="Tabs">
