complete user account page

--- a/Split_It/Split_It/AddExpensePage.xaml
+++ b/Split_It/Split_It/AddExpensePage.xaml
@@ -35,7 +35,7 @@
     </Page.DataContext>
 
     <Page.BottomAppBar>
-        <CommandBar ClosedDisplayMode="Minimal">
+        <CommandBar ClosedDisplayMode="Compact">
             <AppBarButton Command="{Binding RecordExpenseCommand}" Icon="Save" Label="save"/>
         </CommandBar>
     </Page.BottomAppBar>
