--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -187,7 +187,7 @@
                 </RelativePanel>
 
                 <Pivot Grid.Row="1" Style="{StaticResource TabsStylePivotStyle}" x:Name="Tabs">
-                    <PivotItem Header="Friends">
+                    <PivotItem Header="Friends" Margin="0">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -207,7 +207,7 @@
                                 <ListView ItemsSource="{Binding FriendsList}" SelectedItem="{Binding SelectedItem,Mode=TwoWay}">
                                     <ListView.ItemTemplate>
                                         <DataTemplate>
-                                            <RelativePanel Height="70">
+                                            <RelativePanel Height="70" Margin="15,0">
                                                 <Ellipse Style="{StaticResource RoundImage}" x:Name="image"
                                                      RelativePanel.AlignVerticalCenterWithPanel="True">
                                                     <Ellipse.Fill>
@@ -244,7 +244,7 @@
                         </Grid>
                     </PivotItem>
 
-                    <PivotItem Header="Groups">
+                    <PivotItem Header="Groups" Margin="0">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -264,7 +264,7 @@
                                 <ListView ItemsSource="{Binding GroupsList}" SelectedItem="{Binding SelectedItem,Mode=TwoWay}">
                                     <ListView.ItemTemplate>
                                         <DataTemplate>
-                                            <Grid Margin="0,15">
+                                            <Grid Margin="15">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="Auto"/>
                                                     <ColumnDefinition Width="*"/>
@@ -329,12 +329,11 @@
                         </Grid>
                     </PivotItem>
 
-                    <PivotItem Header="Recent">
-
+                    <PivotItem Header="Recent" Margin="0">
                         <ListView ItemsSource="{Binding RecentNotifications}">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid Margin="0,15">
+                                    <Grid Margin="15">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto"/>
                                             <ColumnDefinition Width="*"/>
